--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     display: flex;
     justify-content: center;
     align-items: center;
-    background-color: #c5c5c5;
+    background-color: #656565;
     height: 100vh;
 }
 
